--- a/framework/Makefile
+++ b/framework/Makefile
@@ -1,7 +1,7 @@
-# Makefile for philo_one, updated Sun May  9 20:34:20 JST 2021
+# Makefile for philo_one, updated Sun May  9 21:13:56 JST 2021
 
-SRC := libunit.c ut_libft.c ut_list.c ut_utils.c
-OBJ := libunit.o ut_libft.o ut_list.o ut_utils.o
+SRC := libunit.c ut_fork.c ut_libft.c ut_list.c ut_utils.c
+OBJ := libunit.o ut_fork.o ut_libft.o ut_list.o ut_utils.o
 
 HDR := libunit.h
 
