--- a/real-tests/libft/Makefile
+++ b/real-tests/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: tayamamo <tayamamo@student.42tokyo.jp>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/06/23 22:55:28 by tayamamo          #+#    #+#              #
-#    Updated: 2021/05/10 03:28:18 by tayamamo         ###   ########.fr        #
+#    Updated: 2021/05/10 11:48:46 by tayamamo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,7 +26,7 @@ SRCS	= ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c \
 		  ft_toupper.c ft_tolower.c ft_calloc.c ft_strdup.c \
 		  ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c \
 		  ft_itoa.c ft_strmapi.c ft_putchar_fd.c ft_putstr_fd.c \
-		  ft_putendl_fd.c ft_putnbr_fd.c
+		  ft_putendl_fd.c ft_putnbr_fd.c ft_isspace.c
 SRCS	+= ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c \
 		  ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c \
 		  ft_lstiter.c ft_lstmap.c
