--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,5 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-      - name: make test -C real-tests
-        run: make test -C real-tests
+      - name: make test -C tests
+        run: make test -C tests
