--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
           echo test, and deploy your project.
       - name: make test -C tests
         run: make test -C tests
-      - name: make test -C resl-tests
-        run: make test -C resl-tests
+      - name: make test -C real-tests
+        run: make test -C real-tests
