--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: 42 Norminette
         uses: alexandregv/norminette-action@v3
-      - name: make test -C tests
-        run: make test -C tests
-      - name: make test -C real-tests
-        run: make test -C real-tests
+      - name: test in tests folder
+        run: make -C tests && ./tests/unit_test
+      - name: test in real-tests folder
+        run: make -C real-tests && ./real-tests/unit_test
