--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,10 +1,10 @@
-# Makefile for philo_one, updated 2021年  5月 13日 木曜日 12:35:50 CEST
+# Makefile for philo_one, updated 2021年 5月14日 金曜日 09時31分47秒 JST
 
 SRC := main.c
-SRC += create_msg/00_launcher.c create_msg/01_create_msg_basic_test.c fpe/00_launcher.c fpe/01_fpe_ok_test.c fpe/02_fpe_fpe_test.c libft/ft_create_msg.c libft/ft_div_by_zero.c libft/ft_strlen.c strlen/00_launcher.c strlen/01_strlen_ok_test.c strlen/02_strlen_ko_test.c strlen/03_strlen_segv_test.c strlen/04_strlen_buserr_test.c strlen/05_strlen_timeout_test.c
+SRC += create_msg/00_launcher.c create_msg/01_create_msg_basic_test.c fpe/00_launcher.c fpe/01_fpe_ok_test.c fpe/02_fpe_fpe_test.c is_prime/00_launcher.c is_prime/01_is_prime_basic_test.c is_prime/02_is_prime_bigger_test.c libft/ft_create_msg.c libft/ft_div_by_zero.c libft/ft_is_prime.c libft/ft_strlen.c strlen/00_launcher.c strlen/01_strlen_ok_test.c strlen/02_strlen_ko_test.c strlen/03_strlen_segv_test.c strlen/04_strlen_buserr_test.c strlen/05_strlen_timeout_test.c
 
 OBJ := main.o
-OBJ += create_msg/00_launcher.o create_msg/01_create_msg_basic_test.o fpe/00_launcher.o fpe/01_fpe_ok_test.o fpe/02_fpe_fpe_test.o libft/ft_create_msg.o libft/ft_div_by_zero.o libft/ft_strlen.o strlen/00_launcher.o strlen/01_strlen_ok_test.o strlen/02_strlen_ko_test.o strlen/03_strlen_segv_test.o strlen/04_strlen_buserr_test.o strlen/05_strlen_timeout_test.o
+OBJ += create_msg/00_launcher.o create_msg/01_create_msg_basic_test.o fpe/00_launcher.o fpe/01_fpe_ok_test.o fpe/02_fpe_fpe_test.o is_prime/00_launcher.o is_prime/01_is_prime_basic_test.o is_prime/02_is_prime_bigger_test.o libft/ft_create_msg.o libft/ft_div_by_zero.o libft/ft_is_prime.o libft/ft_strlen.o strlen/00_launcher.o strlen/01_strlen_ok_test.o strlen/02_strlen_ko_test.o strlen/03_strlen_segv_test.o strlen/04_strlen_buserr_test.o strlen/05_strlen_timeout_test.o
 
 # DO NOT ADD OR MODIFY ANY LINES ABOVE THIS -- run 'make source' to add files
 
